--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,19 +13,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Install dependencies
-        run: python -m pip install --upgrade pip | pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip &&
+          pip install -r requirements.txt
+      
       - name: Lint with flake8
-        run: flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics | flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+        run: |
+          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics &&
+          flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+      
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
-      # Adding a step for installing nodejs and npm
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      # Add a step for vulnerability scanning using Snyk
-      - name: Vulnerability scanning with Snyk
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: npm install --unsafe-perm -g snyk && npx snyk test --all-projects
+      
+      # Add Trivy vulnerability scanning step
+      - name: Vulnerability scanning with Trivy
+        run: |
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add - &&
+          echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list &&
+          sudo apt-get update -q &&
+          sudo apt-get install trivy -yq &&
+          trivy --exit-code 0 --severity HIGH,CRITICAL --no-progress --ignore-unfixed .
