Rewrote installing Trivy section.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Vulnerability scanning with Trivy
         run: |
           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add - &&
-          echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list &&
+          echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -cs) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list &&
           sudo apt-get update -q &&
           sudo apt-get install trivy -yq &&
           trivy --exit-code 0 --severity HIGH,CRITICAL --no-progress --ignore-unfixed .
