--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,26 +9,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: python:3.9-slim
     steps:
+      - name: Install utilities
+        run: |
+          apt-get update -yq &&
+          apt-get install -yq wget sudo gnupg
+      
       - name: Checkout
         uses: actions/checkout@v4
       
       - name: Install dependencies
         run: |
-          sudo apt-get update -yq &&
-          sudo apt-get install -yq python3-pip &&
-          pip3 install --upgrade pip &&
-          pip3 install -r requirements.txt
+          python -m pip install --upgrade pip &&
+          pip install -r requirements.txt
       
       - name: Lint with flake8
         run: |
-          pip3 install flake8 &&
-          flake8 src
+          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics &&
+          flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
       
       - name: Run unit tests with nose
-        run: |
-          pip3 install nose coverage &&
-          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
       
       - name: Basic vulnerability check
         run: |
