--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,9 +31,13 @@ jobs:
       
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
-      
-      - name: Basic vulnerability check
+
+      - name: Install Trivy
         run: |
-          sudo apt-get install -yq curl &&
-          curl -sSL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh -s -- -b /usr/local/bin &&
-          trivy --exit-code 0 --severity HIGH,CRITICAL --no-progress --ignore-unfixed --input /requirements.txt
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update -yq
+          sudo apt-get install -yq trivy
+      
+      - name: Scan Docker image with Trivy
+        run: trivy --exit-code 1 --severity HIGH,CRITICAL python:3.9-slim
