--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           sudo apt-get install -yq curl &&
           curl -sSL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh -s -- -b /usr/local/bin &&
-          trivy image --exit-code 0 --severity HIGH,CRITICAL --no-progress --ignore-unfixed --input /requirements.txt
+          trivy image --exit-code 0 --severity HIGH,CRITICAL --no-progress --ignore-unfixed --input python:3.9-slim
