--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,29 +11,24 @@ jobs:
     runs-on: ubuntu-latest
     container: python:3.9-slim
     steps:
-      - name: Install utilities
-        run: |
-          apt-get update -yq &&
-          apt-get install -yq wget sudo gnupg
-      
       - name: Checkout
         uses: actions/checkout@v4
-      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip &&
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
       - name: Lint with flake8
         run: |
-          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics &&
+          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
-      
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
-      
-      - name: Basic vulnerability check
+      - name: Install CodeClimate CLI
         run: |
-          sudo apt-get install -yq curl &&
-          curl -sSL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh -s -- -b /usr/local/bin &&
-          trivy image --exit-code 0 --severity HIGH,CRITICAL --no-progress --ignore-unfixed --input python:3.9-slim
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+      - name: Upload test coverage to CodeClimate
+        run: |
+          ./cc-test-reporter before-build
+          ./cc-test-reporter format-coverage -t counter.py -o codeclimate.json -r .coverage.xml
+          ./cc-test-reporter upload-coverage -i codeclimate.json
