--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload test coverage to CodeClimate
         run: |
           ./cc-test-reporter before-build
-          ./cc-test-reporter format-coverage -t counter.py -o codeclimate.json -r .coverage.xml
+          ./cc-test-reporter format-coverage -t coverage.py -o codeclimate.json -r .coverage.xml
           ./cc-test-reporter upload-coverage -i codeclimate.json
