--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install curl
+        run: apt-get update && apt-get install -y curl
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
