--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,8 +6,6 @@ on:
   pull_request:
     branches:
       - main
-  schedule:
-    - cron: "0 0 * * *" # Schedule Dependabot to run daily
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,25 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Lint with flake8
+      - name: Lint with Pylint
         run: |
-          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+          pylint src
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
-
-  dependabot:
-    runs-on: ubuntu-latest
-    name: Dependabot
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - name: Install Dependabot
-        run: |
-          curl -sSL -o dependabot.sh https://raw.githubusercontent.com/dependabot/dependabot-core/master/scripts/install.sh
-          chmod +x dependabot.sh
-          ./dependabot.sh
